--- a/01_decorators/01_generators.ipynb
+++ b/01_decorators/01_generators.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "id": "a0962ab8",
    "metadata": {},
    "outputs": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "635a0947",
    "metadata": {},
    "outputs": [
@@ -93,8 +93,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<function my_func_1 at 0x1105cd1c0>\n",
-      "<function my_func_2 at 0x1105cce00>\n"
+      "<function my_func_1 at 0x37ae5f6a0>\n",
+      "<function my_func_2 at 0x103858ae0>\n"
      ]
     }
    ],
@@ -107,6 +107,7 @@
     "def my_func_2():\n",
     "    print(\"Сейчас отдам число\")\n",
     "    yield 1\n",
+    "    print('next')\n",
     "\n",
     "print(my_func_1)\n",
     "print(my_func_2)"
@@ -114,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "7adfb8ac",
    "metadata": {},
    "outputs": [
@@ -124,7 +125,7 @@
      "text": [
       "Сейчас отдам число\n",
       "1\n",
-      "<generator object my_func_2 at 0x110536800>\n"
+      "<generator object my_func_2 at 0x37ae4b700>\n"
      ]
     }
    ],
@@ -143,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "95215867",
    "metadata": {},
    "outputs": [
@@ -161,6 +162,65 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "a8a3c2a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Сейчас отдам число\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = my_func_2()\n",
+    "\n",
+    "next(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "6486cf6e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "next\n"
+     ]
+    },
+    {
+     "ename": "StopIteration",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mStopIteration\u001b[0m                             Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[14], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;43mnext\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43ma\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mStopIteration\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "next(a)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "c023dc54",
    "metadata": {},
@@ -170,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "43be40b8",
    "metadata": {},
    "outputs": [
@@ -178,7 +238,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<generator object my_func_2 at 0x110536800>\n",
+      "<generator object my_func_2 at 0x1037c6c80>\n",
       "Сейчас отдам число\n",
       "1\n",
       "Ого, мы только что получили число из объекта-генератора по запросу!\n",
@@ -206,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "b08afa6c",
    "metadata": {},
    "outputs": [
@@ -229,7 +289,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mStopIteration\u001b[0m                             Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[6], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mОго, мы только что получили число из объекта-генератора по запросу!\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mnext\u001b[39m(gen_o))\n\u001b[0;32m----> 5\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28;43mnext\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mgen_o\u001b[49m\u001b[43m)\u001b[49m)\n",
+      "Cell \u001b[0;32mIn[7], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mОго, мы только что получили число из объекта-генератора по запросу!\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mnext\u001b[39m(gen_o))\n\u001b[0;32m----> 5\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28;43mnext\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mgen_o\u001b[49m\u001b[43m)\u001b[49m)\n",
       "\u001b[0;31mStopIteration\u001b[0m: "
      ]
     }
@@ -252,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "id": "d2b474b1",
    "metadata": {},
    "outputs": [
@@ -324,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "id": "ea34297d",
    "metadata": {},
    "outputs": [
@@ -332,7 +392,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<generator object <genexpr> at 0x1105c5490>\n"
+      "<generator object <genexpr> at 0x37b2cfac0>\n"
      ]
     }
    ],
@@ -340,6 +400,14 @@
     "squares = (i ** 2 for i in range(10))\n",
     "print(squares)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "79f387b2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -351,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "id": "4474d4c4",
    "metadata": {},
    "outputs": [
@@ -373,6 +441,22 @@
     "\n",
     "print(\", \".join(str(x) for x in fib(10)))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7819132e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8bd6dcee",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
